# kasm

./: .gitignore  Cargo.toml
examples/: hello_world.kasm  hello_world.kbin  loop.kasm  loop.kbin  primes.kasm  test.kasm  test.kbin
frontend/: Cargo.toml  index.html  main.css
frontend/ace/: ext-prompt.js  keybinding-vim.js
frontend/bootstrap/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
frontend/src/: console.rs  control_panel.rs  editor.rs  help.rs  helpers.rs  main.rs  settings.rs  web_cpu.rs
frontend/src/model_views/: mod.rs
frontend/src/views/: control_panel.rs  cpu.rs  footer.rs  header.rs  help.rs  main.rs  mod.rs  popup.rs  ram.rs  settings.rs
src/: command.rs  cpu.rs  error.rs  instruction.rs  interrupt.rs  lexer.rs  lib.rs  main.rs  shell.rs
src/lexer/: code_line.rs  code_token.rs  jump_point.rs  mod.rs
