[package]
name = "kasm"
version = "0.1.0"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
byte-slice-cast = "1.0.0"
derive_more = "0.99.11"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0.24"

[workspace]
default-members = ["."]
members = [
    ".",
    "frontend"
]
