[package]
name = "frontend"
version = "0.1.0"
authors = ["Dzenan Jupic <56133904+DzenanJupic@users.noreply.github.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
itertools = "0.10.0"
kasm = { path = "../" }
log = "0.4.14"
num-traits = "0.2.14"
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"] }
seed = "0.8.0"
serde = "1.0.125"
serde_json = "1.0.64"
strum = "0.20.0"
wasm-bindgen = "=0.2.73"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
